[package]
name = "reinforcement_learning_project"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
nalgebra = "0.33.0"
rand = "0.9.0-alpha.2"

[[bin]]
name = "line_world"
path = "src/bin/line_world.rs"
