[package]
name = "reinforcement_learning_project"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
nalgebra = "0.33.0"
rand = "0.8.0"
kdam = "0.5.2"
rand_xoshiro = "0.6.0"
serde_json = "1.0.134"
crossterm = "0.26"

# [lib]
# name = "reinforcement_learning_project"
# crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/bin/main.rs"